# agent-mail

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  llms.txt  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  requirements.txt
backend/app/: __init__.py  config.py  database.py  security.py  workers.py
backend/app/api/: __init__.py  emails.py  helpers.py  instances.py  routes.py  schemas.py
backend/app/models/: __init__.py  base.py  email.py  instance.py  instance_domain.py  instance_key.py
backend/app/services/: __init__.py  email_parser.py  instance_service.py
backend/scripts/: migrate_instance_keys.py
docs/: api.md  architecture.md  getting-started.md  index.md  mcp.md  security.md
examples/: README.md  curl-recipes.sh  mcp-config.json  otp_flow.py
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  config.js
frontend/src/components/: AuthForm.vue  CustomDomains.vue  EmailDetail.vue  EmailList.vue  InstanceInfo.vue  SearchFilters.vue
frontend/src/services/: api.js
frontend/src/stores/: appStore.js
frontend/src/utils/: clipboard.js  date.js  emailHeaders.js
mcp/: .env.example  Dockerfile  PUBLISHING.md  README.md  pyproject.toml
mcp/agent_mail_mcp/: __init__.py  __main__.py  client.py  server.py
scripts/: seed_demo.sh
