[project]
name = "agent-mail-mcp"
version = "0.1.0"
description = "MCP server for Agent Mail — lets AI agents create disposable inboxes and read mail."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent-mail-mcp = "agent_mail_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_mail_mcp"]
